# stamp

./: .gitignore  Cargo.toml  README.md  Readme.md  log.txt
src/: log_watch.rs  main.rs  style.rs
stamp/: Cargo.toml
stamp/src/: lib.rs  main.rs  stamp.rs
stampcore/: Cargo.toml
stampcore/src/: lib.rs
