[package]
name = "stamp"
edition = "2021" 
version = "0.0.1" 

[dependencies]
iced = { version = "0.3.0", features = ["image", "debug", "tokio"]  }
opendota_client = {git = "https://github.com/kshammer/opendota_client" }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-attributes = "0.1.20"
reqwest = "0.11.10"
regex = "1.5.5"
lazy_static = "1.4.0"
itertools = "0.10.3"
oneshot = "0.1.3"